--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -4,5 +4,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Gabarito", sans-serif;
+  font-family: "Jost", sans-serif;
 }
