--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -6,3 +6,9 @@
   box-sizing: border-box;
   font-family: "Jost", sans-serif;
 }
+
+:root {
+  --primary-color: #fe7f2d;
+  --secondary-color: #233d4d;
+  --auxiliar-color: #048ba8;
+}
