feat: auxiliar color update

--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -10,7 +10,7 @@
 :root {
   --primary-color: #fe7f2d;
   --secondary-color: #233d4d;
-  --auxiliar-color: #048ba8;
+  --auxiliar-color: #f4faff;
 }
 
 a {
