--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -1,3 +1,5 @@
+@import "./breakpoints.scss";
+
 *,
 *::before,
 *::after {
@@ -11,9 +13,26 @@
   --primary-color: #fe7f2d;
   --secondary-color: #233d4d;
   --auxiliar-color: #f4faff;
+  --navbar-height: 65px;
+}
+
+body {
+  color: var(--secondary-color);
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+@include md {
+  :root {
+    --navbar-height: 85px;
+  }
+}
+
+@include lg {
+  :root {
+    --navbar-height: 100px;
+  }
 }
