--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,11 +1,9 @@
 @import "../../assets/sass/breakpoints.scss";
 
 .nav {
-  --narvbar-height: 65px;
-
   position: relative;
   max-width: 100vw;
-  height: var(--narvbar-height);
+  height: var(--navbar-height);
   border-bottom: 1.5px solid #d6d3d3;
 
   .responsive-navbar {
@@ -30,7 +28,7 @@
       top: 100%;
       left: -100%;
       width: 100vw;
-      height: calc(100vh - var(--narvbar-height));
+      height: calc(100vh - var(--navbar-height));
       z-index: 10;
 
       -webkit-transition: all 0.3s ease;
@@ -67,8 +65,6 @@
   }
 
   @include md {
-    --narvbar-height: 85px;
-
     .responsive-navbar {
       display: none;
     }
@@ -99,8 +95,6 @@
   }
 
   @include lg {
-    --narvbar-height: 100px;
-
     .navbar-container {
       padding: 0 75px;
     }
