--- a/src/components/TwoBoxesContainer/styles.module.scss
+++ b/src/components/TwoBoxesContainer/styles.module.scss
@@ -1,6 +1,9 @@
 @import "../../assets/sass/breakpoints.scss";
 
 .two-boxes-container {
+  display: flex;
+  flex-direction: column-reverse;
+
   .box {
     width: 100%;
     padding: 6vw;
