feat: updating section padding on large devices

--- a/src/pages/Index/components/Services/styles.module.scss
+++ b/src/pages/Index/components/Services/styles.module.scss
@@ -134,6 +134,8 @@
   }
 
   @include lg {
+    padding: 5% 7.5%;
+
     .services-description-container .services-description {
       .icon-container {
         width: 60%;
