--- a/src/pages/Index/components/CustomersComments/styles.module.scss
+++ b/src/pages/Index/components/CustomersComments/styles.module.scss
@@ -1,9 +1,11 @@
 @import "../../../../assets/sass/breakpoints.scss";
 
 .customers-comments {
+  position: relative;
   background-color: var(--secondary-color);
   color: #fff;
   padding: 10%;
+  padding-bottom: 20%;
   margin-top: 50px;
   display: grid;
   gap: 15px;
@@ -66,9 +68,27 @@
     }
   }
 
+  .schedule-info {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 90%;
+    transform: translate(-50%, 50%);
+    background-color: var(--primary-color);
+    text-align: center;
+    font-weight: bold;
+    padding: 4%;
+  }
+
   @include sm {
+    padding-bottom: 10%;
+
     .carousel .controls {
       --prev-left: 70%;
+    }
+
+    .schedule-info {
+      font-size: 4vw;
     }
   }
 
@@ -85,6 +105,7 @@
   @include lg {
     grid-template-columns: 1fr 1fr;
     padding: 5%;
+    padding-bottom: 15%;
 
     .text {
       height: fit-content;
@@ -97,6 +118,12 @@
 
     .carousel .controls {
       --prev-left: 70%;
+    }
+
+    .schedule-info {
+      width: 80%;
+      padding: 2%;
+      font-size: 3.5vw;
     }
   }
 
