feat: contact us title color changed

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -25,6 +25,7 @@
       .contact-us-title {
         font-size: 20px;
         padding-left: calc(10% + 15px);
+        color: var(--primary-color);
       }
 
       .contact-us-item {
