feat: solid background color on cards

--- a/src/components/OrangeBorderCard/styles.module.scss
+++ b/src/components/OrangeBorderCard/styles.module.scss
@@ -7,6 +7,8 @@
   border: 5px solid var(--primary-color);
   border-bottom-width: 25px;
   margin: 0 25px;
+  background-color: #fff;
+  color: #000;
 
   .card-icon-container {
     position: relative;
