--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -17,7 +17,12 @@
 }
 
 body {
+  position: relative;
   color: var(--secondary-color);
+  background-color: #fff;
+  max-width: 2000px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 a {
